--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,38 @@
 body{
     font-family: "Cooper Black", "Arial";
+    background-color: beige;
 }
 #btnNo{
     padding: 10px 20px;
-    background-color: aqua;
+    background-color: #FF0000;
     border: none;
     color: white;
+    font-family: "Cooper Black", "Arial";
     
 }
 #btnSi{
     padding: 10px 20px;
-    background-color: aqua;
+    background-color: #FF0000;
     border: none;
     color: white;
+    font-family: "Cooper Black", "Arial";
 }
 
-.app{
-    width: 200px;
-    margin: 0px auto;
+.app {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
+    background-color: #FFA07A;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 20px;
 }
+
+
 
 .posicion1{
     padding: 10px 20px;
