--- a/styles.css
+++ b/styles.css
@@ -57,11 +57,25 @@ body{
     height: 100vh;
     margin: 0;
     
-    align-items: center;
-    justify-content: center;
+    
     background-color: beige;
 }
-
+.imgCar{
+    padding: 5px;
+    margin: 0;
+}
+.contenedorTarjeta{
+    padding: 0px;
+    margin: 2px;
+    background-color: rgba(221, 20, 20, 0.5);
+}
+.zonaCartas{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+}
 
 .posicion1{
     padding: 10px 20px;
@@ -83,3 +97,11 @@ body{
     top: 17px;
     right: 54px;
 }
+
+.carousel-inner {
+    transition: transform 0.8s ease-in-out;
+  }
+
+.carousel-item {
+    font-size: 3vw; /* O ajusta el valor según tus necesidades */
+  }
