--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: "Cooper Black", "Arial";
-    background-color: beige;
+    background-color: 	#ffa0ce;
 }
 #btnNo{
     padding: 10px 20px;
