--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,19 @@ body{
     text-align: center;
 }
 
+.icono{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+}
+.piePagina{
+    margin-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
+}
+
 
 .RotarIzq {
     transform:rotate(5deg);
