--- a/aniversario/css/styles.css
+++ b/aniversario/css/styles.css
@@ -72,6 +72,11 @@
     display: grid;
     grid-template-columns: 1fr; /* Define una sola columna que ocupa todo el espacio disponible */
 }
+.grid-12 {
+    display: grid;
+    grid-template-columns: 12fr; 
+}
+
 
 /* Estilos adicionales para los elementos dentro del grid */
 .grid-1 > div {
@@ -124,4 +129,21 @@
     max-width: 400px;
     height: auto; /* Mantiene la proporción de la imagen */
     border-radius: 10px;
+}
+.frase
+{
+    font-size: .8rem;
+    
+}
+.btn-empty {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: none;
+    padding: .2rem;
+    margin: 0;
+    color: #ddd;
+    
+    
 }
